# umba_mm_mod_sfmt

./: CMakeLists.txt  README.md  simple_formatter.cpp  umba-mm-module-info.xml  umba_lout.cpp
.msvc/: sources.props
inc/umba/: simple_formatter.h  string_simple_formatter.h
